# fixed-point-compiler

./: .gitignore  CMakeLists.txt  README.md  fixed_point_compiler.h  main.cc  operations.cc  program.cc  range.cc  scale.cc
doc/: Google C++ Style Guide.html
googletest/src/: gtest.cc
test/: simple_test.cc
